# AE_Dashboard_Streamlit

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  PROJECT_STRUCTURE.md  README.md  azure-pipelines.yml  docker-compose.yml  queries_snapshot.json  requirements.txt  run.sh  setup.sh  startup.sh  streamlit_dashboard.py
backend/: .dockerignore  Dockerfile  README.md  pyproject.toml
backend/app/: config.py  deps.py  errors.py  logging_setup.py  main.py  schedulers_registration.py
backend/app/auth/: dev_identity.py  principal.py
backend/app/legacy/: data_engine.py  soql_registry.py  soql_store.py  time_filters.py
backend/app/routers/: audit.py  columns.py  dashboard.py  filters.py  me.py  roster.py  salesforce.py  schedules.py  soql.py  users.py
backend/app/scheduler/: __init__.py  jobs.py
backend/app/schemas/: audit.py  common.py  dashboard.py  filters.py  roster.py  salesforce.py  schedules.py  soql.py  users.py
backend/app/services/: audit_service.py  column_meta.py  dashboard_service.py  email_service.py  filter_service.py  report_renderer.py  roster_service.py  salesforce_client.py  schedule_service.py  soql_service.py  user_service.py
backend/app/storage/: migrations.py  tables.py
backend/tests/: conftest.py  test_audit.py  test_auth_dependency.py  test_columns_endpoint.py  test_dashboard_endpoint.py  test_dashboard_service.py  test_legacy_imports.py  test_principal_parsing.py  test_salesforce_client.py  test_schedule_lifecycle.py  test_smoke.py  test_soql_endpoints.py  test_user_service.py  test_users_endpoint.py
infra/: README.md  (+3 more)
(+174 files in other folders)
