[project]
name = "ae-dashboard-api"
version = "0.1.0"
description = "FastAPI backend for AE Performance Dashboard"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    "simple-salesforce>=1.12.6",
    "azure-data-tables>=12.5.0",
    "apscheduler>=3.10.4",
    "sendgrid>=6.11.0",
    "jinja2>=3.1.4",
    "httpx>=0.27.2",
    "pandas>=2.2.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-mock>=3.14.0",
    "ruff>=0.6.9",
    "mypy>=1.11.0",
    "respx>=0.21.1",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-ra"
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B", "SIM"]
ignore = ["E501"]
